# industrial_training

./: .industrial_training_ci.bash  .travis.yml  workspace_ci.bash
exercises/Descartes_Planning_and_Execution/template_ws/src/plan_and_run/: package.xml
exercises/Descartes_Planning_and_Execution/template_ws/src/ur5_demo_moveit_config/: package.xml
exercises/Descartes_Planning_and_Execution/template_ws/src/ur5_demo_support/: package.xml
exercises/Perception-Driven_Manipulation/: .gitignore
exercises/Perception-Driven_Manipulation/solution_ws/src/object_manipulation_msgs/: package.xml
exercises/Perception-Driven_Manipulation/solution_ws/src/robot_config/: package.xml
exercises/Perception-Driven_Manipulation/solution_ws/src/sensor_config/: package.xml
exercises/Perception-Driven_Manipulation/template_ws/src/: .rosinstall
exercises/Perception-Driven_Manipulation/template_ws/src/collision_avoidance_pick_and_place/: package.xml
exercises/Perception-Driven_Manipulation/template_ws/src/object_manipulation_msgs/: CMakeLists.txt  package.xml
exercises/Perception-Driven_Manipulation/template_ws/src/robot_io/: package.xml
exercises/Perception-Driven_Manipulation/template_ws/src/ur5_collision_avoidance_moveit_config/: package.xml
gh_pages/_source/session3/: Coordinate-Transforms-using-TF.md
