<?xml version="1.0"?>
<package format="2">
  <name>robot_config</name>
  <version>0.0.0</version>
  <description>
     The robot_config package
  </description>

  <maintainer email="jnicho@swri.org">jnicho</maintainer> -->
  <author email="jnicho@swri.org">jnicho</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robot_config</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>

</package>
