<?xml version="1.0"?>
<package format="2">
  <name>sensor_config</name>
  <version>0.0.0</version>
  <description>
     The sensor_config package
  </description>

  <maintainer email="jnicho@swri.org">jnicho</maintainer> -->
  <author email="jnicho@swri.org">jnicho</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/sensor_config</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>

</package>
