<?xml version="1.0"?>
<package format="2">
  <name>collision_avoidance_pick_and_place</name>
  <version>0.0.0</version>
  <description>
     The collision_avoidance_pick_and_place package
  </description>

  <maintainer email="jnicho@swri.org">jnicho</maintainer> -->
  <author email="jnicho@swri.org">jnicho</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collision_avoidance_pick_and_place</url>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_manipulation</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robot_io</depend>
  <depend>object_manipulation_msgs</depend>
  <depend>actionlib</depend>
  <depend>industrial_robot_client</depend>
  <depend>industrial_robot_simulator</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>tf_conversions</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
