<?xml version="1.0"?>
<package format="2">
  <name>robot_io</name>
  <version>0.0.0</version>
  <description>
     The robot_io package
  </description>

  <maintainer email="jnicho@swri.org">jnicho</maintainer> -->
  <author email="jnicho@swri.org">jnicho</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robot_io</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>object_manipulation_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>ur_msgs</depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>
